--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "care_booking",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint ."
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "eslint .",
+  "export": "next export"
+},
   "dependencies": {
     "next": "16.1.1",
     "react": "^18.2.0",
